# kedro-pack

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
recipe/: meta.yaml
src/kedro_pack/: __init__.py
