[tool.poetry]
name = "kedro-pack"
version = "1.0.0"
description = "A generic recipe to install the kedro framework and additional kedro plugins."
authors = ["Kevin Mills <millsks@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "kedro_pack"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = {version = ">=0.18.12,<0.19.0", python = ">=3.10,<3.11"}
kedro-datasets = {version = ">=1.6.0,<2.0.0", python = ">=3.10,<3.11"}
kedro-airflow = {version = ">=0.6.0,<1.0.0", python = ">=3.10,<3.11"}
kedro-mlflow = {version = ">=0.11.9,<1.0.0", python = ">=3.10,<3.11"}
kedro-viz = {version = ">=6.4.0,<7.0.0", python = ">=3.10,<3.11"}
kedro-vertexai = {version = ">=0.9.1,<1.0.0", python = ">=3.10,<3.11"}

[tool.poetry.group.dev.dependencies]
bandit  = ">=1.7.5,<2.0.0"
black = ">=23.7.0,<24.0.0"
flake8 = ">=6.1.0,<7.0.0"
flake8-black = ">=0.3.6,<1.0.0"
flake8-bugbear = ">=23.7.10,<24.0.0"
flake8-builtins = ">=2.1.0,<3.0.0"
flake8-cognitive-complexity = ">=0.1.0,<1.0.0"
flake8-comprehensions = ">=3.14.0,<4.0.0"
flake8-docstrings = ">=1.7.0,<2.0.0"
flake8-eradicate = ">=1.5.0,<2.0.0"
flake8-isort = ">=6.0.0,<7.0.0"
flake8-logging-format = ">=0.9.0,<1.0.0"
flake8-mutable = ">=1.2.0,<2.0.0"
flake8-print = ">=5.0.0,<6.0.0"
flake8-pylint = ">=0.2.0,<1.0.0"
flake8-pyproject = ">=1.2.3,<2.0.0"
flake8-quotes = ">=3.3.2,<4.0.0"
flake8-unused-arguments = ">=0.0.13,<1.0.0"
flake8-use-fstring = ">=1.4,<2.0.0"
flake8-use-pathlib = ">=0.3.0,<1.0.0"
isort = ">=5.12.0"
mypy = ">=1.4.1,<2.0.0"
pre-commit = ">=3.3.3,<4.0.0"
pytest = ">=7.4.0,<8.0.0"
pytest-cookies = ">=0.7.0,<1.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
pytest-django = ">=4.5.2,<5.0.0"
pytest-env = ">=1.0.1,<2.0.0"
pytest-html = ">=3.2.0,<4.0.0"
pytest-instafail = ">=0.5.0,<1.0.0"
pytest-mock = ">=3.11.1,<4.0.0"
pytest-sugar = ">=0.9.7,<1.0.0"
pytest-timeout = ">=2.1.0,<3.0.0"
pytest-xdist = ">=3.3.1,<4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
